--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>이력서</title>
   <link href="//font.elice.io/EliceDigitalBaeum.css" rel="stylesheet">
-  <link rel="stylesheet" href="이력서.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="wrap">
